<resources>
    <string name="app_name">Book App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sing_button">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">You have to sign in for acces to your library.</string>
    <string name="register">Register</string>
    <string name="sign_in_error_msg">Sign in failed. %1$s</string>
    <string name="create_fail_msg">Create user failed</string>
    <string name="empty_password_msg">Password cannot be empty</string>
    <string name="empty_username_msg">Username cannot be empty</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="create_book_item">Create Book Item</string>
    <string name="dashboard">Dashboard</string>


    <string name="book_name">Name</string>
    <string name="create_author">Author</string>
    <string name="name_book_hint">Write name of the book</string>
    <string name="author_hint">Write author of the book</string>
    <string name="genre_create_detail">Genre</string>
    <string name="create_author_hint">Write author of the book</string>

    <string-array name="genres_array">
        <item>Thriller</item>
        <item>Scifi</item>
        <item>Fantasy</item>
        <item>Autobiography</item>
    </string-array>
</resources>
