<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detailLayout">

    <TextView
            android:text="@string/create_book_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_frag_header"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/book_name"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/create_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_name"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.4"
            android:layout_marginBottom="116dp"
            app:layout_constraintBottom_toTopOf="@+id/create_author"
            android:layout_marginStart="8dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="@string/name_book_hint"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_author"/>

    <TextView
            android:text="@string/create_author"
            android:layout_width="43dp"
            android:layout_height="34dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/create_author"
            app:layout_constraintEnd_toStartOf="@+id/edit_author"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.421"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/create_genre"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_author"
            android:hint="@string/create_author_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            tools:targetApi="o"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_genre"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_genre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/spinner_genre"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="168dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.213"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="84dp"
            android:id="@+id/spinner_genre"
            android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent">

    </Spinner>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="260dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="44dp"
            android:id="@+id/create_button"
            app:layout_constraintHorizontal_bias="1.0"/>




</androidx.constraintlayout.widget.ConstraintLayout>




